# trade_2017

./: CMakeLists.txt  Makefile
src/: Bollinger.cpp  Bollinger.hpp  Bot.cpp  Bot.hpp  Buy.cpp  Buy.hpp  MarketPlace.cpp  MarketPlace.hpp  Stats.cpp  Stats.hpp  main.cpp
src/parser/: JsonParser.cpp  JsonParser.hpp  Parser.cpp  Parser.hpp
trade/push_index/: .index.db  trade_bordeaux_
trade/server/: trade_bordeaux_
